[Fix] font flicker

--- a/src/components/home/navbar/navbar.module.scss
+++ b/src/components/home/navbar/navbar.module.scss
@@ -1,8 +1,3 @@
-@font-face {
-    font-family: 'Code-Bold';
-    src: url('/fonts/CODE-Bold.otf');
-}
-
 .navbar{
     position:fixed;
     top:0;
