--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -11,14 +11,7 @@
         @content;
     }
 }
-@font-face {
-    font-family: 'drawing-guides';
-    src: url('/fonts/Drawing-Guides.ttf');
-}
-@font-face {
-    font-family: 'Code-Bold';
-    src: url('/fonts/CODE-Bold.otf');
-}
+
 
 .banner {
     position:relative;
