--- a/src/pages/about/about.module.scss
+++ b/src/pages/about/about.module.scss
@@ -1,7 +1,3 @@
-@font-face {
-    font-family: 'Code-Bold';
-    src: url('/fonts/CODE-Bold.otf');
-}
 .about{
     position:relative;
     min-height:100vh;
