--- a/src/pages/contact/contact.module.scss
+++ b/src/pages/contact/contact.module.scss
@@ -11,10 +11,6 @@
         @content;
     }
 }
-@font-face {
-    font-family: 'Code-Bold';
-    src: url('/fonts/CODE-Bold.otf');
-}
 
 .contact{
     position:relative;
